--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine on
 RewriteBase /
+RewriteCond %{REQUEST_FILENAME} !.*.php$
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.+)$ index.php?dir=$1 [QSA,END]
