Bug fix in .htaccess add B flag

--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,5 +1,4 @@
 RewriteEngine on
 RewriteBase /
-RewriteCond %{REQUEST_FILENAME} !.*.php$
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.+)$ index.php?dir=$1 [QSA,END]
+RewriteRule (.+) index.php?dir=$1 [B,QSA,L]
