--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine on
 RewriteBase /
+RewriteCond %{REQUEST_FILENAME}/index.html !-f
+RewriteCond %{REQUEST_FILENAME}/index.php !-f
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule (.+) index.php?dir=$1 [B,QSA,L]
