--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,3 +1,5 @@
+AddType "text/markdown; charset=utf-8" .md
+AddDefaultCharset utf-8
 RewriteEngine on
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME}/index.html !-f
